Fixed contrast text issues in contact form and feedback form and fixed sizing of contact/feedback form

--- a/feedback/static/feedback/css/feedback.css
+++ b/feedback/static/feedback/css/feedback.css
@@ -5,19 +5,20 @@
 }
 
 body {
-    background: url('/media/microphone.jpg') no-repeat center center fixed;
+    background: url('/media/microphone.jpg');
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Kanit', sans-serif;
+    color: white;
 }
 
 .card {
     position: relative;
-    width: 400px;
-    height: auto;
-    padding: 5rem;
+    width: 50%;
+    height: fit-content;
+    text-align: center;
     background: #331c57;
     border-radius: 8px;
     display: flex;
@@ -27,16 +28,16 @@ body {
 }
 
 .card h4 {
+    margin-top: 2%;
     color: #fff;
     padding: 1rem;
     text-align: center;
 }
 
 .rate {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
-    padding-left: 23px;
+    text-align: center;
+    margin-right: 22%;
+    margin-bottom: 4%;
 }
 
 .rate:not(:checked)>input {
@@ -78,9 +79,9 @@ body {
 .btn {
     padding: .8rem;
     border: none;
-    background-color: #4158D0;
     background: linear-gradient(0.25turn, #900000, #6A2659, #900000);
-    color: #fff;
+    margin-top: 3%;
+    color: white;
     text-transform: uppercase;
     letter-spacing: 1px;
     border-radius: 4px;
@@ -89,7 +90,6 @@ body {
 }
 
 .btn:hover {
-    background-color: #4158D0;
     background: linear-gradient(0.25turn, #e90404, #be43a0, #d80000);
     box-shadow: 2px 3px 10px rgba(255, 255, 255, .2);
 
@@ -99,9 +99,10 @@ body {
 .link {
     text-decoration: underline;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 3%;
+    padding-bottom: 3%;
     color: #ffffff;
-    font-size: 15px;
+    font-size: 1rem
 }
 
 /* Success section */
@@ -111,20 +112,13 @@ body {
     /* outline:1px solid ;*/
 }
 
-body {
-    background: linear-gradient(0.25turn, #900000, #6A2659, #900000);
-    height: 100%;
-    margin: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-
-}
 
 .wrapper-1 {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
+    background: #331c57;
 }
 
 .wrapper-2 {
@@ -134,16 +128,16 @@ body {
 
 h1 {
     font-family: 'Kanit', cursive;
-    font-size: 4em;
+    font-size: 2em;
     letter-spacing: 3px;
-    color: #d3b8ff;
+    color: #ffffff;
     margin: 0;
     margin-bottom: 30px;
 }
 
 .wrapper-2 p {
     margin: 0;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     color: rgb(255, 255, 255);
     font-family: 'Kanit', sans-serif;
     letter-spacing: 1.5px;
@@ -151,24 +145,22 @@ h1 {
 
 .footer-like {
     margin-top: auto;
-    background: #4b000082;
-    padding: 30px;
+    padding: 5%;
     text-align: center;
     text-decoration: underline;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 .footer-like p {
     margin: 0;
-    padding: 4px;
-    color: #d3b8ff;
+    color: #ffffff;
     font-family: 'Kanit', sans-serif;
     letter-spacing: 1px;
 }
 
 .footer-like p a {
     text-decoration: none;
-    color: #d3b8ff;
+    color: #fefdff;
     font-weight: 600;
 }
 
